# rag

./: .coverage.DESKTOP-R7R46L0.pid17196.XhVAHS8x  .dockerignore  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  FRONTEND_API.md  FRONTEND_API_KEY_SETUP.txt  FRONTEND_PLAN_AND_EXAMPLES.md  GUIDED_FLOW_UPDATE.md  README.md  SCRAPER_USAGE.md  agent_chat_poll.js  agent_chat_ui.html  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements-dev.txt  requirements-prod.txt  requirements.txt  setup.sh  swagger.yaml
alembic/: env.py
config/: keyword_synonyms.yml  processing_config.yml  rag_config.yml  scraping_config.yml
database/: chat_schema.sql
docs/: TRAVEL_INSURANCE_PUSH_GUIDE.md  pending-tasks_Backend.md  progress.md
flows/: serenicare_flow.json
general_information/: general_info_handler.py  general_information.py
product_json/: motor_private.json  motor_private_config.json  personal_accident_config.json
scripts/: deploy.sh  discover_urls.py  generate_embeddings.py  init_database.py  init_pgvector.py  recreate_vector_table.py  run_flow_demo.py  run_processing.py  run_rag.py  run_scraping.py  run_travel_insurance_tests.py  test_chatbot_api.py  test_conversation_context.py  test_motor_private_benefits.py  test_motor_quotation.py  test_neon_connection.py  test_quote_endpoints.py  test_rag_diagnosis.py  test_simplified_mode.py  test_travel_insurance_api.py
src/: error_handler.py  fallback_handler.py  followup_manager.py  metrics.py  response_processor.py
tests/: conftest.py  test_backend_endpoints.py  test_error_handler.py  (+24 more)
(+137 files in other folders)
